--- a/web/package.json
+++ b/web/package.json
@@ -5,10 +5,13 @@
     "dev": "vite --port 8080"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "framer-motion": "^7.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.7.16",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
